--- a/sass/layout/partials/_header.scss
+++ b/sass/layout/partials/_header.scss
@@ -62,3 +62,35 @@
         }
     }   
 }
+
+
+@media (max-width: 375px) {
+  .row{
+    .kredimOlDiv{
+           .KredimOlLogo {
+              margin-left: 50px !important; //23
+          }
+        }
+     .arabacomDiv{
+          .Arabacom---Logo{ 
+            margin-left: 200px !important; //23
+          }
+        }
+    }   
+}
+
+@media (max-width: 320px) {
+  .row{
+    .kredimOlDiv{
+           .KredimOlLogo {
+              margin-left: 20px !important; //23
+          }
+        }
+     .arabacomDiv{
+          .Arabacom---Logo{ 
+            margin-left: 170px !important; //23
+          }
+        }
+    }   
+}
+
