--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -9,3 +9,7 @@ $paddingSize:17px;
 $backMainColorOfIcon:#51859a;
 $backColorFirstStep:#51859a;
 $backColorAnotherSteps:#717173;
+
+// fontsize of 320px
+
+$smallFontSize :20px;
