--- a/sass/components/_btnContinue.scss
+++ b/sass/components/_btnContinue.scss
@@ -35,3 +35,26 @@
         margin-right: 0px;
     }
 }
+
+@media (max-width: 425px) {
+    .btnContinue{
+        width: 300px !important;
+        height: 50px !important;
+        margin-right: 20px !important;
+        border-radius: 10px !important;
+    }
+}
+@media (max-width: 375px) {
+    .btnContinue{
+       margin-right: -5px !important;
+        
+}
+    }
+
+@media (max-width: 320px) {
+    .btnContinue{
+     
+       margin-right: -25px !important;
+
+    }
+}
