--- a/sass/components/_lineInStepBar.scss
+++ b/sass/components/_lineInStepBar.scss
@@ -48,3 +48,20 @@
     }
            }
 }
+
+@media (max-width: 375px) {
+  .LineInStepBarOne{
+     
+    margin : {
+     
+     left: 8px;
+     }
+ }
+  .LineInStepBarTwo{
+     
+     margin : {
+      
+      left: 5px;
+      }
+  }
+}
