--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -10,6 +10,9 @@ $backMainColorOfIcon:#51859a;
 $backColorFirstStep:#51859a;
 $backColorAnotherSteps:#717173;
 
+
+$cursor : pointer;
+
 // fontsize of 320px
 
 $smallFontSize :20px;
