--- a/css/main.css
+++ b/css/main.css
@@ -113,6 +113,7 @@
   .zemin .row .kredimOlDiv {
     text-align: left; }
     .zemin .row .kredimOlDiv .KredimOlLogo {
+      cursor: pointer;
       width: 180px;
       height: 36px;
       object-fit: contain;
@@ -122,6 +123,7 @@
   .zemin .row .arabacomDiv {
     text-align: right; }
     .zemin .row .arabacomDiv .Arabacom---Logo {
+      cursor: pointer;
       width: 180px;
       height: 36px;
       object-fit: contain;
@@ -337,6 +339,16 @@
     .sectionBodyOfPage .sectionMid .SecondRow .leftPart {
       margin-left: 33px;
       margin-right: 30px; }
+      .sectionBodyOfPage .sectionMid .SecondRow .leftPart .imgInside {
+        position: absolute;
+        cursor: pointer;
+        margin-top: 140px;
+        margin-left: 10px;
+        height: 20px;
+        opacity: .5; }
+        .sectionBodyOfPage .sectionMid .SecondRow .leftPart .imgInside img {
+          width: 60px;
+          border-radius: 12px; }
     .sectionBodyOfPage .sectionMid .SecondRow .rightPart .row1 {
       border-bottom: 1px solid #d3dbdd; }
     .sectionBodyOfPage .sectionMid .SecondRow .rightPart .row2 {
@@ -462,6 +474,9 @@
   .leftPart .imgFirst {
     margin-left: 30px; }
   .leftPart .imgSecond {
+    margin-left: 30px; }
+
+  .imgInside img {
     margin-left: 30px; } }
 @media (max-width: 375px) {
   .contTest {
@@ -470,28 +485,37 @@
   .leftPart .imgFirst {
     margin-left: 0px; }
   .leftPart .imgSecond {
-    margin-left: 0px; } }
+    margin-left: 0px; }
+
+  .imgInside img {
+    margin-left: 10px; } }
 @media (max-width: 320px) {
   .leftPart .imgFirst {
     width: 236px;
     margin-left: -22px; }
   .leftPart .imgSecond {
     width: 236px;
-    margin-left: -22px; } }
+    margin-left: -22px; }
+
+  .imgInside img {
+    margin-left: -15px; } }
 .footerRow {
   background-color: #ffffff;
   padding-top: 10px;
   padding-bottom: 10px; }
   .footerRow .aljLogo {
+    cursor: pointer;
     margin-left: 70px; }
   .footerRow .googleLogo {
+    cursor: pointer;
     margin-right: 8px; }
   .footerRow .appleLogo {
+    cursor: pointer;
     margin-right: 70px; }
 
 @media (max-width: 1024px) {
   .appleLogo {
-    margin-right: 10px; } }
+    margin-right: 10px !important; } }
 @media (max-width: 425px) {
   .footerRow {
     height: 120px; }
