--- a/sass/layout/partials/_section.scss
+++ b/sass/layout/partials/_section.scss
@@ -325,6 +325,19 @@
             margin : {
                 left: 33px;
                 right: 30px;
+               
+            }
+            .imgInside{
+                position: absolute;
+                cursor: pointer;
+                margin-top: 140px;
+                margin-left: 10px;
+                height: 20px;
+                opacity: .5;
+                img{
+                    width: 60px;
+                    border-radius:12px;
+                }
             }
         }
         .rightPart{
@@ -389,6 +402,13 @@
          margin-left: 30px;
         }
     }
+
+    .imgInside{
+      
+        img{
+            margin-left: 30px;
+        }
+    }
 }
 
 @media (max-width: 375px) {
@@ -402,6 +422,12 @@
         }
         .imgSecond{
          margin-left: 0px;
+        }
+    }
+    .imgInside{
+      
+        img{
+            margin-left: 10px;
         }
     }
 }
@@ -419,5 +445,10 @@
             margin-left: -22px;
         }
     }
-   
+    .imgInside{
+      
+        img{
+            margin-left: -15px;
+        }
+    }
 }   
