--- a/sass/base/_mixins.scss
+++ b/sass/base/_mixins.scss
@@ -14,6 +14,12 @@
     margin-left: 20px;
 }
 
+@mixin mixinForLogo{
+    width: 118px !important;
+    height: 24px !important;
+    margin-top: 23px !important;
+    margin-bottom: 23px !important;
+}
 
 @mixin mixinForStepText {
     width: 112px;
