--- a/sass/layout/partials/_header.scss
+++ b/sass/layout/partials/_header.scss
@@ -41,11 +41,10 @@
       position: absolute;
 
            .KredimOlLogo {
-           width: 118px !important;
-           height: 24px !important;
+         
+            @include mixinForLogo;
            margin-left: 50px !important; //23
-           margin-top: 23px !important;
-           margin-bottom: 23px !important;
+          
           }
         }
 
@@ -53,12 +52,11 @@
       position: absolute;
         
           .Arabacom---Logo{ 
-            @include mixinForImagesOnTop;
-            width: 118px !important;
-            height: 24px !important;
+            
+            @include mixinForLogo;
+
             margin-left: 250px !important; //23
-            margin-top: 23px !important;
-            margin-bottom: 23px !important;
+           
           
           }
         }
